# segment-display-imagerecognition

./: pyproject.toml  requirements.txt  segdisp_imgrec.py
output/: test.csv
