[project]
name = "segment-display-imagerecognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "et-xmlfile==2.0.0",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "pytesseract==0.3.13",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "tzdata==2025.2",
]
